--- a/1.html
+++ b/1.html
@@ -41,7 +41,7 @@
     <p>천문연의 선형분광필터를 장착한 스피어x는 우주에 존재하는 약 20억 개에 달하는 개별 천체들의 전천 분광 목록을 작성한다.
     스피어x의 관측 영상과 각 천체의 방출 스펙트럼을 재구성하면 우주의 3차원 공간 정보를 얻을 수 있다.
     이는 우주의 생성과 팽창 등 우주의 비밀을 푸는 실마리로 활용할 수 있다.</p>
-    <img src="picture\picture1.jpg" width = "100%">
+    <img src="picture1.jpg" width = "100%">
     <p style="margin-top:40px">또 우리은하와 우주에 얼음 상태로 존재하는 물과 이산화탄소 등의 분포 지도를 작성해 지구와 같이 생명체가 존재할 수 있는 행성계 탐사 연구도 가능하다.
     천문연은 이 외에도 천문연은 망원경의 우주환경시험에 사용될 극저온 진공 챔버 개발 및 테스트를 주도한다.
     이어 관측자료 분석 소프트웨어 개발과 핵심 과학연구 등에도 참여한다.</p>
